faucet update: add channel send for testnet/regtest
